force-app/main/default/objects/Blackout_Time__c/Blackout_Time__c.object-meta.xml
<CustomObject>
    <label>Blackout Time</label>
    <nameField>
        <label>Blackout Time Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blackout Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>