force-app/main/default/objects/Blackout_Time__c/fields/Blackout_reason__c.field-meta.xml
<CustomField>
    <fullName>Blackout_reason__c</fullName>
    <label>Blackout reason</label>
    <length>250</length>
    <type>Text</type>
</CustomField>