force-app/main/default/objects/Blackout_Time__c/fields/Blackout_Start_time__c.field-meta.xml
<CustomField>
    <fullName>Blackout_Start_time__c</fullName>
    <label>Blackout Start time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>