force-app/main/default/objects/Blackout_Time__c/fields/Bot_Message__c.field-meta.xml
<CustomField>
    <fullName>Bot_Message__c</fullName>
    <label>Bot Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>