force-app/main/default/objects/Blackout_Time__c/fields/Other_no_service_time__c.field-meta.xml
<CustomField>
    <fullName>Other_no_service_time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other no service time</label>
    <type>Checkbox</type>
</CustomField>