force-app/main/default/objects/Blackout_Time__c/fields/TestRecord__c.field-meta.xml
<CustomField>
    <fullName>TestRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestRecord</label>
    <type>Checkbox</type>
</CustomField>