force-app/main/default/objects/Blackout_Time__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ראש השנה</fullName>
            </value>
            <value>
                <fullName>יום כיפור</fullName>
            </value>
            <value>
                <fullName>סוכות</fullName>
            </value>
            <value>
                <fullName>פורים</fullName>
            </value>
            <value>
                <fullName>פסח</fullName>
            </value>
            <value>
                <fullName>יום העצמאות</fullName>
            </value>
            <value>
                <fullName>שבועות</fullName>
            </value>
            <value>
                <fullName>תשעה באב</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>